added step 9 but got type error

--- a/HippoWithResUNetandU_net.ipynb
+++ b/HippoWithResUNetandU_net.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPtOQW8GYP5k3lgrsBWNDlF",
+      "authorship_tag": "ABX9TyMZhrP7McWx9vZ0ATgr7Oqf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -120,7 +120,7 @@
         "id": "vhUhx3zMzIQK",
         "outputId": "9a1b968c-a7f3-4dee-b6bb-3783a5d1bd2e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +239,7 @@
         "id": "qy9pP-L901Lw",
         "outputId": "5a929116-6245-4049-ea7f-c7dd17e0e049"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +305,7 @@
         "id": "u01z35uXzvtl",
         "outputId": "60d50ede-1355-4c46-d70b-31bc1cadfc5e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -365,7 +365,7 @@
         "id": "y4MDF6zY3L44",
         "outputId": "5f149965-f87c-4b90-caa1-6228e4482b89"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -427,7 +427,7 @@
         "id": "OAwfM1Rq3gx0",
         "outputId": "7de1ccf2-10a7-409a-a3cc-1713ccf1798a"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -732,7 +732,7 @@
         "id": "EaSvQCjh3u0E",
         "outputId": "7fe0a266-36cc-442d-a30b-0cb43d200b31"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1881,7 +1881,7 @@
         "id": "dzo9hxJk3-pf",
         "outputId": "4da0337b-9a69-4383-c939-0c63a216fcee"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2126,6 +2126,168 @@
             "\u001b[1m57/57\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 84ms/step - dice_coef: 0.9997 - iou: 0.9993 - loss: 0.0027 - val_dice_coef: 0.9996 - val_iou: 0.9993 - val_loss: 0.0027\n",
             "ResUNet training complete.\n",
             "Training complete. Models saved to Google Drive.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Cell 9: Evaluation and Visualization\n",
+        "# Purpose: Generate per-sample visualizations, montages, confusion matrices, and metrics table.\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "def extract_id(file_path, prefix='img_'):\n",
+        "    return os.path.basename(file_path).replace(prefix, '').split('.')[0]\n",
+        "\n",
+        "metrics_table = []\n",
+        "models_to_evaluate = [('ResUNet', resunet_model, resunet_results)]\n",
+        "try:\n",
+        "    if unet_resnet50_results is not None:\n",
+        "        models_to_evaluate.append(('U-Net_ResNet50', unet_resnet50_model, unet_resnet50_results))\n",
+        "    else:\n",
+        "        print(\"Skipping U-Net_ResNet50 evaluation: training results not available.\")\n",
+        "except NameError:\n",
+        "    print(\"Skipping U-Net_ResNet50 evaluation: unet_resnet50_results not defined.\")\n",
+        "\n",
+        "for model_name, model, results in models_to_evaluate:\n",
+        "    if X_test.shape[0] == 0:\n",
+        "        print(f\"No test data for {model_name} evaluation.\")\n",
+        "        continue\n",
+        "\n",
+        "    print(f\"Evaluating {model_name}...\")\n",
+        "    preds = model.predict(X_test, verbose=1)\n",
+        "\n",
+        "    for id in range(min(5, X_test.shape[0])):\n",
+        "        pred = preds[id]\n",
+        "        y_true = Y_test[id]\n",
+        "        dice, iou, precision, recall = compute_metrics(y_true, pred)\n",
+        "\n",
+        "        false_positives = (pred > 0.5).astype(np.float32) - y_true.clip(0, 1)\n",
+        "        false_negatives = y_true - (pred > 0.5).astype(np.float32).clip(0, 1)\n",
+        "\n",
+        "        fig, ax = plt.subplots(2, 3, figsize=(15, 10))\n",
+        "        ax[0, 0].imshow(X_test[id], cmap='gray')\n",
+        "        ax[0, 0].set_title(f\"Input Image (ID: {extract_id(train_data[id][0], 'img_aug')})\")\n",
+        "        ax[0, 0].axis('off')\n",
+        "        ax[0, 1].imshow(y_true[:, :, 0], cmap='gray')\n",
+        "        ax[0, 1].set_title(f\"Ground Truth\\nDice: {dice:.4f}, IoU: {iou:.4f}\\nPrecision: {precision:.4f}, Recall: {recall:.4f}\")\n",
+        "        ax[0, 1].axis('off')\n",
+        "        ax[0, 2].imshow((pred > 0.5)[:, :, 0], cmap='gray')\n",
+        "        ax[0, 2].set_title(f\"Predicted Mask ({model_name})\")\n",
+        "        ax[0, 2].axis('off')\n",
+        "        ax[1, 0].imshow(X_test[id], cmap='gray')\n",
+        "        ax[1, 0].imshow((pred > 0.5)[:, :, 0], cmap='jet', alpha=0.5)\n",
+        "        ax[1, 0].set_title(\"Overlay\")\n",
+        "        ax[1, 0].axis('off')\n",
+        "        ax[1, 1].imshow(false_positives[:, :, 0], cmap='Reds')\n",
+        "        ax[1, 1].set_title(\"False Positives\")\n",
+        "        ax[1, 1].axis('off')\n",
+        "        ax[1, 2].imshow(false_negatives[:, :, 0], cmap='Blues')\n",
+        "        ax[1, 2].set_title(\"False Negatives\")\n",
+        "        ax[1, 2].axis('off')\n",
+        "        plt.tight_layout()\n",
+        "        plt.show()\n",
+        "\n",
+        "        metrics_table.append({\n",
+        "            'Model': model_name,\n",
+        "            'Sample ID': extract_id(train_data[id][0], 'img_aug'),\n",
+        "            'Dice': dice,\n",
+        "            'IoU': iou,\n",
+        "            'Precision': precision,\n",
+        "            'Recall': recall\n",
+        "        })\n",
+        "\n",
+        "    y_true_f = Y_test.flatten()\n",
+        "    y_pred_f = (preds > 0.5).flatten()\n",
+        "    cm = confusion_matrix(y_true_f, y_pred_f)\n",
+        "    plt.figure(figsize=(6, 5))\n",
+        "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
+        "    plt.title(f\"Confusion Matrix ({model_name})\")\n",
+        "    plt.ylabel('True')\n",
+        "    plt.xlabel('Predicted')\n",
+        "    plt.show()\n",
+        "\n",
+        "    fig = custom_montage(X_test, n_rows=5, n_cols=5, cmap='gray')\n",
+        "    if fig:\n",
+        "        plt.title(f'MRI Input Images ({model_name})')\n",
+        "        plt.show()\n",
+        "    fig = custom_montage(Y_test, n_rows=5, n_cols=5, cmap='gray')\n",
+        "    if fig:\n",
+        "        plt.title(f'Ground Truth Masks ({model_name})')\n",
+        "        plt.show()\n",
+        "    fig = custom_montage(preds > 0.5, n_rows=5, n_cols=5, cmap='gray')\n",
+        "    if fig:\n",
+        "        plt.title(f'Predicted Masks ({model_name})')\n",
+        "        plt.show()\n",
+        "    fig = custom_montage((preds > 0.5).astype(np.float32) - Y_test.clip(0, 1), n_rows=5, n_cols=5, cmap='Reds')\n",
+        "    if fig:\n",
+        "        plt.title(f'False Positives ({model_name})')\n",
+        "        plt.show()\n",
+        "    fig = custom_montage(Y_test - (preds > 0.5).astype(np.float32).clip(0, 1), n_rows=5, n_cols=5, cmap='Blues')\n",
+        "    if fig:\n",
+        "        plt.title(f'False Negatives ({model_name})')\n",
+        "        plt.show()\n",
+        "\n",
+        "metrics_df = pd.DataFrame(metrics_table)\n",
+        "print(\"Metrics Table:\")\n",
+        "print(metrics_df)\n",
+        "\n",
+        "for model_name, results in [('ResUNet', resunet_results)] + ([('U-Net_ResNet50', unet_resnet50_results)] if 'unet_resnet50_results' in globals() and unet_resnet50_results is not None else []):\n",
+        "    plt.figure(figsize=(12, 4))\n",
+        "    plt.subplot(1, 3, 1)\n",
+        "    plt.plot(results.history.get('dice_coef', []), 'r', label='Training Dice')\n",
+        "    plt.plot(results.history.get('val_dice_coef', []), 'b', label='Validation Dice')\n",
+        "    plt.title(f'{model_name} Dice Coefficient')\n",
+        "    plt.legend()\n",
+        "    plt.subplot(1, 3, 2)\n",
+        "    plt.plot(results.history.get('iou', []), 'r', label='Training IoU')\n",
+        "    plt.plot(results.history.get('val_iou', []), 'b', label='Validation IoU')\n",
+        "    plt.title(f'{model_name} IoU')\n",
+        "    plt.legend()\n",
+        "    plt.subplot(1, 3, 3)\n",
+        "    plt.plot(results.history.get('loss', []), 'r', label='Training Loss')\n",
+        "    plt.plot(results.history.get('val_loss', []), 'b', label='Validation Loss')\n",
+        "    plt.title(f'{model_name} Loss')\n",
+        "    plt.legend()\n",
+        "    plt.tight_layout()\n",
+        "    plt.show()\n",
+        "\n",
+        "print(\"Evaluation complete.\")"
+      ],
+      "metadata": {
+        "id": "EaNApzHvCJKH",
+        "outputId": "439ce735-faec-434f-c3b0-3652d8fca21d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 384
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Skipping U-Net_ResNet50 evaluation: training results not available.\n",
+            "Evaluating ResUNet...\n",
+            "\u001b[1m2/2\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 78ms/step\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'numpy.float32' object is not callable",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-34-22c486078503>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0mpred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0my_true\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mY_test\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m         \u001b[0mdice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miou\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprecision\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrecall\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_metrics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0mfalse_positives\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mpred\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-4-229920710b2c>\u001b[0m in \u001b[0;36mcompute_metrics\u001b[0;34m(y_true, y_pred, threshold)\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0my_pred_bin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mthreshold\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat32\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0mdice\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdice_coef\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred_bin\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0miou_score\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miou\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred_bin\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m     \u001b[0my_true_f\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0my_pred_f\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_pred_bin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'numpy.float32' object is not callable"
           ]
         }
       ]
