--- a/HippoWithResUNetandU_net.ipynb
+++ b/HippoWithResUNetandU_net.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM88Bqxj6ibEwdNOIGSy46k",
+      "authorship_tag": "ABX9TyMmaxOmG6v3ZGPn1zkStGKG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2411,6 +2411,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "the model is predicting empty or near-empty masks, and the ground truth masks may also be empty or nearly empty"
+      ],
+      "metadata": {
+        "id": "bZRU66ieETsC"
+      }
     },
     {
       "cell_type": "code",
