--- a/HippoWithResNetU_Net.ipynb
+++ b/HippoWithResNetU_Net.ipynb
@@ -29,20 +29,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 1,
       "metadata": {
         "id": "y0mUk0zqFNKO",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cbd0932b-0647-4cfd-8f2f-b607b8e3a46d"
+        "outputId": "090e8998-be1b-46ae-bb20-8bc0247a60e6"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "Mounted at /content/drive\n",
             "TensorFlow version: 2.18.0\n",
             "Environment setup complete.\n"
           ]
@@ -76,7 +76,7 @@
       "cell_type": "code",
       "source": [
         "# Cell 2: Define Metrics\n",
-        "# Purpose: Define metrics for segmentation, handling edge cases.\n",
+        "# Purpose: Define metrics for segmentation.\n",
         "def dice_coef(y_true, y_pred, smooth=1e-6):\n",
         "    y_true_f = tf.keras.backend.flatten(y_true)\n",
         "    y_pred_f = tf.keras.backend.flatten(y_pred)\n",
@@ -108,9 +108,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "knpZn8cCHht8",
-        "outputId": "0883dacf-3a38-4130-8f35-1cb8f32e9c3f"
+        "outputId": "41cc04fd-2c12-412d-f51d-10dbe2132fb7"
       },
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
