Step 6: Handle Imbalanced Data

--- a/DL4cyber.ipynb
+++ b/DL4cyber.ipynb
@@ -2491,6 +2491,16 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 6: Handle Imbalanced Data\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "aiAlIvyIzpbW"
+      }
     }
   ]
 }
