added Step 8: Evaluate and Save the Model

--- a/DL4cyber.ipynb
+++ b/DL4cyber.ipynb
@@ -2711,7 +2711,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 249,
+          "height": 269,
           "referenced_widgets": [
             "801625799f2a4a69908d5043ebd39840",
             "158d74e9c9cc49938f8af7d5a6c2e826",
@@ -2975,8 +2975,6 @@
         "    print(f\"Val Loss: {val_loss:.4f}, Accuracy: {val_acc:.4f}, Precision: {val_precision:.4f}, Recall: {val_recall:.4f}, F1: {val_f1:.4f}\")"
       ],
       "metadata": {
-        "id": "ahtvTNfKz6Lz",
-        "outputId": "5ce47bbf-0863-429d-8d0b-c77b255a8017",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173,
@@ -2993,55 +2991,79 @@
             "5c8e41b0503d4341aee187e30feac854",
             "9c56cd4c896943919ecec0f371dd2f77"
           ]
-        }
+        },
+        "id": "ahtvTNfKz6Lz",
+        "outputId": "4880030a-55f7-4284-9e54-63a2d1384163"
       },
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Class Weights: tensor([0.6225, 2.5404], device='cuda:0')\n"
           ]
         },
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n",
             "WARNING:huggingface_hub.file_download:Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n"
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "7ab27cca795647d293538622f6dc4404",
+              "version_major": 2,
+              "version_minor": 0
+            },
             "text/plain": [
               "model.safetensors:   0%|          | 0.00/440M [00:00<?, ?B/s]"
-            ],
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "7ab27cca795647d293538622f6dc4404"
-            }
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
             "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
           ]
         },
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/3\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Step 8: Evaluate and Save the Model\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "OpQ6XNDGBYF3"
+      }
     }
   ]
 }
