--- a/CyberAttackDetection.ipynb
+++ b/CyberAttackDetection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOcrOfRNZb9/i/FreCqexwZ",
+      "authorship_tag": "ABX9TyOqjxN9+j0v/PMAf/l6/ciW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2525,6 +2525,54 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Step 11: Save Model\n",
+        "def save_model(trainer, tokenizer):\n",
+        "    print(\"\\nStep 11: Save Model\")\n",
+        "    model_dir = '/content/drive/MyDrive/attack_classifier_model'\n",
+        "    try:\n",
+        "        trainer.save_model(model_dir)\n",
+        "        tokenizer.save_pretrained(model_dir)\n",
+        "        print(f\"Model and tokenizer saved to {model_dir}\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error saving model: {e}\")\n",
+        "\n",
+        "    print_memory_usage(\"Step 11\")\n",
+        "\n",
+        "save_model(trainer, tokenizer)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IpaMefdMVOBK",
+        "outputId": "1aef0fd3-390c-4cc3-ed27-d5441ad11485"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Step 11: Save Model\n",
+            "Model and tokenizer saved to /content/drive/MyDrive/attack_classifier_model\n",
+            "Step 11 - Memory usage: 3237.94 MB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Debugging Tips"
+      ],
+      "metadata": {
+        "id": "jPzbCbaRVW52"
+      }
     }
   ]
 }
