--- a/CyberAttackDetection.ipynb
+++ b/CyberAttackDetection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOqjxN9+j0v/PMAf/l6/ciW",
+      "authorship_tag": "ABX9TyNE084epzrhZMyZ3N/dYMeG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2573,6 +2573,141 @@
       "metadata": {
         "id": "jPzbCbaRVW52"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Check Transformers Version:"
+      ],
+      "metadata": {
+        "id": "KU9WsfAvVfnC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import transformers\n",
+        "print(transformers.__version__)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SNtBcc3iVaIU",
+        "outputId": "c064bb8b-d245-4921-c81d-72d48b0a5140"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4.51.3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## RAM Issues:"
+      ],
+      "metadata": {
+        "id": "6VZ2iCZDVtEE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.cuda.empty_cache()"
+      ],
+      "metadata": {
+        "id": "0qSNs05kVqhq"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Read preprocessed data"
+      ],
+      "metadata": {
+        "id": "I7tEqYw0V93v"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pd.read_csv('/content/preprocessed_cicids2017.csv')\n",
+        "print(df.head())\n",
+        "print(df['Label'].value_counts())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BuLKpYPuV9MN",
+        "outputId": "8666c8e5-e565-40bd-e9af-172e6be2d4a8"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                                                text  Label\n",
+            "0   Destination Port:2.559312343597412  Flow Dura...      0\n",
+            "1   Destination Port:2.5696494579315186  Flow Dur...      0\n",
+            "2   Destination Port:2.569704055786133  Flow Dura...      0\n",
+            "3   Destination Port:2.08735990524292  Flow Durat...      0\n",
+            "4   Destination Port:2.5592029094696045  Flow Dur...      0\n",
+            "Label\n",
+            "0    2273097\n",
+            "1     557646\n",
+            "Name: count, dtype: int64\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Test"
+      ],
+      "metadata": {
+        "id": "tLwAowXFWXZd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from transformers import AutoModelForSequenceClassification, AutoTokenizer\n",
+        "model = AutoModelForSequenceClassification.from_pretrained('/content/drive/MyDrive/attack_classifier_model')\n",
+        "tokenizer = AutoTokenizer.from_pretrained('/content/drive/MyDrive/attack_classifier_model')\n",
+        "text = \"Destination Port:-0.4172302186489105 Flow Duration:...\"\n",
+        "inputs = tokenizer(text, return_tensors=\"pt\", padding=True, truncation=True, max_length=128)\n",
+        "outputs = model(**inputs)\n",
+        "prediction = torch.argmax(outputs.logits, dim=-1).item()\n",
+        "print(\"Prediction:\", \"Attack\" if prediction == 1 else \"Non-Attack\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BKDJvU2zWQIg",
+        "outputId": "15a61cb3-3195-4d4f-cc2c-f6890af859c8"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Prediction: Non-Attack\n"
+          ]
+        }
+      ]
     }
   ]
 }
