--- a/CAST.ipynb
+++ b/CAST.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPEjEVV7Q4PsmEYpHd1iXD3",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyPQhp3isQB7ndSPeHCwmp6T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -28,12 +30,84 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "BpbXqhIhWAMo"
+        "id": "BpbXqhIhWAMo",
+        "outputId": "c01d5bc7-b1c6-4242-c1a0-e1e2fbe8fae7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "Get:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease [3,632 B]\n",
+            "Get:2 http://security.ubuntu.com/ubuntu jammy-security InRelease [129 kB]\n",
+            "Get:3 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease [1,581 B]\n",
+            "Hit:4 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
+            "Get:5 https://r2u.stat.illinois.edu/ubuntu jammy InRelease [6,555 B]\n",
+            "Get:6 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  Packages [1,607 kB]\n",
+            "Get:7 http://archive.ubuntu.com/ubuntu jammy-updates InRelease [128 kB]\n",
+            "Get:8 https://r2u.stat.illinois.edu/ubuntu jammy/main amd64 Packages [2,701 kB]\n",
+            "Hit:9 https://ppa.launchpadcontent.net/deadsnakes/ppa/ubuntu jammy InRelease\n",
+            "Get:10 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy InRelease [24.3 kB]\n",
+            "Get:11 https://r2u.stat.illinois.edu/ubuntu jammy/main all Packages [8,863 kB]\n",
+            "Get:12 http://archive.ubuntu.com/ubuntu jammy-backports InRelease [127 kB]\n",
+            "Hit:13 https://ppa.launchpadcontent.net/ubuntugis/ppa/ubuntu jammy InRelease\n",
+            "Get:14 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 Packages [1,543 kB]\n",
+            "Get:15 https://ppa.launchpadcontent.net/graphics-drivers/ppa/ubuntu jammy/main amd64 Packages [47.4 kB]\n",
+            "Get:16 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 Packages [3,154 kB]\n",
+            "Fetched 18.3 MB in 2s (8,587 kB/s)\n",
+            "Reading package lists... Done\n",
+            "W: Skipping acquire of configured file 'main/source/Sources' as repository 'https://r2u.stat.illinois.edu/ubuntu jammy InRelease' does not seem to provide it (sources.list entry misspelt?)\n",
+            "Reading package lists... Done\n",
+            "Building dependency tree... Done\n",
+            "Reading state information... Done\n",
+            "Package ants is not available, but is referred to by another package.\n",
+            "This may mean that the package is missing, has been obsoleted, or\n",
+            "is only available from another source\n",
+            "\n",
+            "E: Package 'ants' has no installation candidate\n",
+            "Requirement already satisfied: nibabel in /usr/local/lib/python3.11/dist-packages (5.3.2)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (2.0.2)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.11/dist-packages (1.14.1)\n",
+            "\u001b[31mERROR: Could not find a version that satisfies the requirement deepmedic (from versions: none)\u001b[0m\u001b[31m\n",
+            "\u001b[0m\u001b[31mERROR: No matching distribution found for deepmedic\u001b[0m\u001b[31m\n",
+            "\u001b[0mCloning into '/content/CAST'...\n",
+            "remote: Enumerating objects: 323, done.\u001b[K\n",
+            "remote: Counting objects: 100% (39/39), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (36/36), done.\u001b[K\n",
+            "remote: Total 323 (delta 20), reused 10 (delta 3), pack-reused 284 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (323/323), 129.72 MiB | 40.67 MiB/s, done.\n",
+            "Resolving deltas: 100% (68/68), done.\n",
+            "cp: cannot create directory '/content/drive/MyDrive/CAST_project/CAST': No such file or directory\n",
+            "[Errno 2] No such file or directory: '/content/drive/MyDrive/CAST_project/CAST'\n",
+            "/content\n",
+            "/bin/bash: line 1: deepMedicRun: command not found\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Mount Google Drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# Install dependencies\n",
+        "!apt-get update\n",
+        "!apt-get install -y ants  # For optional affine transformations\n",
+        "!pip install nibabel numpy scipy deepmedic matplotlib\n",
+        "\n",
+        "# Clone CAST repository\n",
+        "!git clone https://github.com/CCLRCBH-BIC/CAST.git /content/CAST\n",
+        "!cp -r /content/CAST /content/drive/MyDrive/CAST_project/CAST\n",
+        "%cd /content/drive/MyDrive/CAST_project/CAST\n",
+        "\n",
+        "# Verify DeepMedic\n",
+        "!deepMedicRun --help"
+      ]
     }
   ]
 }
