--- a/Alzheimer's_disease_prediction_XGB_,_PCA.ipynb
+++ b/Alzheimer's_disease_prediction_XGB_,_PCA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPry5q5HUikZmVrQzit4e+j",
+      "authorship_tag": "ABX9TyOBALpYJ/LLcY+M6DObcdoy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1645,6 +1645,46 @@
           "execution_count": 13
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_int = sum(df.dtypes == 'int64')\n",
+        "num_object = sum(df.dtypes == 'object')\n",
+        "num_float64 = sum(df.dtypes == 'float64')\n",
+        "\n",
+        "print(f\"Number of Columns that are  'int': {num_int}\")\n",
+        "print(f\"Number of Columns that are  'object': {num_object}\")\n",
+        "print(f\"Number of Columns that are  'float': {num_float64}\")"
+      ],
+      "metadata": {
+        "id": "TOK2DcfwxJ6h",
+        "outputId": "6e2a4593-7acb-473e-e398-aacf36d63b31",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number of Columns that are  'int': 150\n",
+            "Number of Columns that are  'object': 2\n",
+            "Number of Columns that are  'float': 300\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lCwyJ3ovxKbh"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
