--- a/Alzheimer's_disease_prediction_XGB_,_PCA.ipynb
+++ b/Alzheimer's_disease_prediction_XGB_,_PCA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBALpYJ/LLcY+M6DObcdoy",
+      "authorship_tag": "ABX9TyOI6ODA7oMDLoXmjQMcJGUi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1658,11 +1658,11 @@
         "print(f\"Number of Columns that are  'float': {num_float64}\")"
       ],
       "metadata": {
-        "id": "TOK2DcfwxJ6h",
-        "outputId": "6e2a4593-7acb-473e-e398-aacf36d63b31",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TOK2DcfwxJ6h",
+        "outputId": "6e2a4593-7acb-473e-e398-aacf36d63b31"
       },
       "execution_count": 15,
       "outputs": [
@@ -1679,12 +1679,113 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df.isna().sum()\n"
+      ],
       "metadata": {
-        "id": "lCwyJ3ovxKbh"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 458
+        },
+        "id": "lCwyJ3ovxKbh",
+        "outputId": "2db4890c-e774-4d1a-bd7a-458089db062f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ID                 0\n",
+              "air_time1          0\n",
+              "disp_index1        0\n",
+              "gmrt_in_air1       0\n",
+              "gmrt_on_paper1     0\n",
+              "                  ..\n",
+              "paper_time25       0\n",
+              "pressure_mean25    0\n",
+              "pressure_var25     0\n",
+              "total_time25       0\n",
+              "class              0\n",
+              "Length: 452, dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>ID</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>air_time1</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>disp_index1</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>gmrt_in_air1</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>gmrt_on_paper1</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>paper_time25</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>pressure_mean25</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>pressure_var25</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>total_time25</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>class</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>452 rows × 1 columns</p>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     }
   ]
 }
