--- a/Alzheimer's_disease_prediction_XGB_,_PCA.ipynb
+++ b/Alzheimer's_disease_prediction_XGB_,_PCA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOI6ODA7oMDLoXmjQMcJGUi",
+      "authorship_tag": "ABX9TyPHx4BEHrfvKCDZ8PuW8Vic",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1786,6 +1786,42 @@
           "execution_count": 16
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "object_cols = df.select_dtypes(include='object').columns.tolist()\n",
+        "# print the column names\n",
+        "print(object_cols)"
+      ],
+      "metadata": {
+        "id": "mQmhK4fOx9m3",
+        "outputId": "12a19689-6c88-45eb-fffb-08df95c67134",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['ID', 'class']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.drop('ID',axis = 1 , inplace = True)\n"
+      ],
+      "metadata": {
+        "id": "Myh28KrvyCWv"
+      },
+      "execution_count": 19,
+      "outputs": []
     }
   ]
 }
